# Bowling_Game

./: CMakeLists.txt  README.md  build.sh  main.cpp
data/: input.txt  multiple_games.txt
include/: bowling_game.h  file_reader.h  frame_base.h  game_controller.h  regular_frame.h  score_calculator.h  tenth_frame.h
src/: bowling_game.cpp  file_reader.cpp  frame_base.cpp  game_controller.cpp  regular_frame.cpp  score_calculator.cpp  tenth_frame.cpp
